syntax = "proto3";

package lerp;

import "common.proto";

enum MsgUpType {
    GAME_PAUSE = 0;
    PLAYER_INIT = 1;
    PLAYER_MOVE = 2;
    PLAYER_TELEPORT = 3;
    PLAYER_THROW_PROJECTILE = 4;
    PLAYER_THROW_FROZEN_ORB = 5;
    PLAYER_MELEE_ATTACK = 6;
    SETTINGS_TOGGLE_ENEMIES = 7;
    USER_CONNECT = 8;
    USER_DISCONNECT = 9;
    USER_CREATE_WORLD_INSTANCE = 10;
    USER_JOIN_WOLD_INSTANCE = 11;
    USER_LEAVE_WORLD_INSTANCE = 12;
}

message MsgUpUserJoinWorldInstance {
    string id = 1;
}

message MsgUp {
    MsgUpType _type = 1;
    Point player_move = 2;
    Point player_teleport = 3;
    Point player_throw_projectile = 4;
    Point player_throw_frozen_orb = 5;
    string user_connect_username = 6;
    MsgUpUserJoinWorldInstance user_join_world_instance = 7;
}

message MsgUpWrapper {
    repeated MsgUp messages = 1;
}